# goocalendar

./: .gitlab-ci.yml  .hgignore  .hgtags  .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  README  README.rst  pyproject.toml  setup.py
GooCalendar/: Calendar.py  DayItem.py  Event.py  EventItem.py  EventStore.py  TimelineItem.py  __init__.py  util.py
doc/: Makefile  conf.py  index.rst
examples/: simple.py  simple2.py  simple3.py
goocalendar/: __init__.py  _calendar.py  _event.py  util.py
